--- a/index.html
+++ b/index.html
@@ -26,27 +26,27 @@
  </div>
 
 <dl id="newA">
-    <dd><a href="..//Task/课堂作业/表格.html">2018.9.14</a></dd>
-    <dd><a href="..//Task/课堂作业/伪类.html">2018.9.23</a></dd>
-    <dd><a href="..//Task/课堂作业/超级链接美化.html">2018.9.26</a></dd>
-    <dd><a href="..//Task/课堂作业/结构化伪类.html">2018.10.15</a></dd>
-    <dd><a href="..//Task/课堂作业/响应式布局10.21/index.html">2018.10.22</a></dd>
-    <dd><a href="..//Task/课堂作业/02azmazon-AnimationJS/amazon.html">2018.10.26</a></dd>
+    <dd><a href="..//HomeWord/课堂作业/表格.html">2018.9.14</a></dd>
+    <dd><a href="..///HomeWord/课堂作业/伪类.html">2018.9.23</a></dd>
+    <dd><a href="..//HomeWord/课堂作业/超级链接美化.html">2018.9.26</a></dd>
+    <dd><a href="..//HomeWord/课堂作业/结构化伪类.html">2018.10.15</a></dd>
+    <dd><a href="..//HomeWord/课堂作业/响应式布局10.21/index.html">2018.10.22</a></dd>
+    <dd><a href="..//HomeWord/课堂作业/02azmazon-AnimationJS/amazon.html">2018.10.26</a></dd>
 </dl>
 <dl id="newB">
-    <dd><a href="..//Task/课后作业/电影时间/电影时间练习.html">2018</a></dd>
-    <dd><a href="..//Task/课后作业/盒模型/盒模型.html">2018</a></dd>
-    <dd><a href="..//Task/课后作业/谭木记/谭木记css.html">2018</a></dd>
-    <dd><a href="..//Task/课后作业/博雅/博雅.html">2018</a></dd>
-    <dd><a href="..//Task/课后作业/猴版表单样式.html">2018.10.18</a></dd>
-    <dd><a href="..//Task/课后作业/弹性盒子(Flex Box).html">2018.10.22</a></dd>  
-     <dd><a href="..//Task/课后作业/10first-splash/number-guessing-game.html">2018.10.23</a></dd>
-     <dd><a href="..//Task/课后作业/43bootstrap/">购物车</a></dd>
+    <dd><a href="..//HomeWord//课后作业/电影时间/电影时间练习.html">2018</a></dd>
+    <dd><a href="..//HomeWord/课后作业/盒模型/盒模型.html">2018</a></dd>
+    <dd><a href="..//HomeWord/课后作业/谭木记/谭木记css.html">2018</a></dd>
+    <dd><a href="..//HomeWord/课后作业/博雅/博雅.html">2018</a></dd>
+    <dd><a href="..//HomeWord/课后作业/猴版表单样式.html">2018.10.18</a></dd>
+    <dd><a href="..//HomeWord/课后作业/弹性盒子(Flex Box).html">2018.10.22</a></dd>  
+     <dd><a href="..//HomeWord/课后作业/10first-splash/number-guessing-game.html">2018.10.23</a></dd>
+     <dd><a href="..//HomeWord/课后作业/43bootstrap/index.html">购物车</a></dd>
   
 </dl>
 <dl id="newC">
-    <dd><a href="课本项目/itheimaM/heima/index.html">第五章</a></dd>
-    <dd><a href=".//课本项目/第八章项目/HeiMaCaiFu/index.html">第八章</a></dd>
+    <dd><a href="课本项目/itheimaM/Heima5/index.html">第五章</a></dd>
+    <dd><a href="课本项目/第八章项目/HeiMa8/index.html">第八章</a></dd>
 
 </dl>
 </body>
