--- a/课堂作业/43bootstrap/shoppingCart.html
+++ b/课堂作业/43bootstrap/shoppingCart.html
@@ -76,7 +76,7 @@
       <div class="row p-3 mt-1 bg-light d-none" id="orderExample">
         <div class="col-2"><input type="checkbox"></div>
         <div class="col-5">
-          <a href=""><img src="./images/04.jpg" alt="" width="100px" height="100px"></a><span>微星（MSI） GS73 (003CN) 17.3英寸轻薄游戏本 六核i7-8750H GTX1070 8G独显 16G内存 1T+256G固态</span>
+          <a href=""><img src="../43bootstrap/images/01.jpg" alt="" data-name="imgSrc" width="100px" height="100px"></a><span>微星（MSI） GS73 (003CN) 17.3英寸轻薄游戏本 六核i7-8750H GTX1070 8G独显 16G内存 1T+256G固态</span>
         </div>
         <div class="col-1 text-right ">￥<span name="price">16999.00</span></div>
         <div class="col-2">
