--- a/课堂作业/43bootstrap/shoppingCart.html
+++ b/课堂作业/43bootstrap/shoppingCart.html
@@ -57,28 +57,28 @@
             </div>
       </div>
       <div class="col order-12">
-        商品
+        操作
       </div>
       <div class="col order-1">
-        单价
+        商品
       </div>
       <div class="col order-11">
-          数量
+          单价
         </div>
         <div class="col order-1">
-          小计
+          数量
         </div>
         <div class="col order-11">
-            操作
+          操作
           </div>   
     </div>
     <div id="cartContent">
       <div class="row p-3 mt-1 bg-light d-none" id="orderExample">
-        <div class="col-2"><input type="checkbox"></div>
+        <div class="col-2"><input type="checkbox" data-name="checkItemt"></div>
         <div class="col-5">
-          <a href=""><img src="../43bootstrap/images/01.jpg" alt="" data-name="imgSrc" width="100px" height="100px"></a><span>微星（MSI） GS73 (003CN) 17.3英寸轻薄游戏本 六核i7-8750H GTX1070 8G独显 16G内存 1T+256G固态</span>
+          <a href=""><img src="../43bootstrap/images/02.jpg" alt="" data-name="imgSrc" width="100px" height="100px"></a><span data-name="title">微星（MSI） GS73 (003CN) 17.3英寸轻薄游戏本 六核i7-8750H GTX1070 8G独显 16G内存 1T+256G固态</span>
         </div>
-        <div class="col-1 text-right ">￥<span name="price">16999.00</span></div>
+        <div class="col-1 text-right ">￥<span data-name="price">69.00</span></div>
         <div class="col-2">
           <div class="btn-group">
             <button type="button" class="btn btn-sm btn-outline-danger" name='increase'>+</button>
@@ -86,16 +86,16 @@
             <button type="button" class="btn btn-sm btn-outline-danger" name='decrease'>-</button>
           </div>
         </div>
-        <div class="col-1">￥<span name="subTotal">0.00</span></div>
-        <div class="col-1"><button class="btn btn-light" name='deleteItem'>删除</button></div>
+        <div class="col-1">￥<span data-name="subTotal">0.00</span></div>
+        <div class="col-1"><button class="btn btn-light" data-operato='deleteItem'>删除</button></div>
       </div>
     </div>
     <div class="row mt-3 border p-3">
       <div class="col-2"><input type="checkbox">全选</div>
       <div class="col-2"><button class="btn btn-light" name='deleteSelect'>删除选中的商品</button></div>
       <div class="col-2"><button class="btn btn-light" name='clearCart'>清除购物车</button></div>
-      <div class="col-2">已选择 <span class="text-danger" name="totalProduct">0</span>件商品</div>
-      <div class="col-2">总价：￥<span class="text-danger" name="totalPrice">0</span></div>
+      <div class="col-2">已选择 <span class="text-danger" data-name="totalProduct">0</span>件商品</div>
+      <div class="col-2">总价：￥<span class="text-danger" data-name="totalPrice">0</span></div>
       <div class="col-2"><button class="btn btn-danger">去结算</button></div>
     </div>  
   </div>
@@ -173,6 +173,7 @@
 
     
     <script src="js/shoppingCart.js"></script>
-    <script src="js/cartList.js"></script>
+    <!-- <script src="js/cartList.js"></script> -->
+    <script src="js/list.js"></script>
   </body>
 </html>
