--- a/课堂作业/43bootstrap/shoppingCart.html
+++ b/课堂作业/43bootstrap/shoppingCart.html
@@ -41,13 +41,13 @@
 
 <div class="container" >
     <div class="row">
-        <div class="col-sm-1">全部商品</div>
+        <div class="col-2 font-weight-bold">全部商品 <span class="text-danger" data-name="units">0</span></div>
         <div class="col-sm-8">黑马商城</div>
         <div class="clo-sm-3">配送至：</div>
         <div class="clo-sm-3">柳州职业技术学院</div>
       </div>
 </div>
-<div class="container" style="background-color:#dedef8;">
+<div class="container" id="cartRoot" style="background-color:#dedef8;">
     <div class="row">
       <div class="col">
           <div class="checkbox">
@@ -74,29 +74,29 @@
     </div>
     <div id="cartContent">
       <div class="row p-3 mt-1 bg-light d-none" id="orderExample">
-        <div class="col-2"><input type="checkbox" data-name="checkItemt"></div>
+        <div class="col-2"><input type="checkbox" data-operator='checkItem'></div>
         <div class="col-5">
-          <a href=""><img src="../43bootstrap/images/02.jpg" alt="" data-name="imgSrc" width="100px" height="100px"></a><span data-name="title">微星（MSI） GS73 (003CN) 17.3英寸轻薄游戏本 六核i7-8750H GTX1070 8G独显 16G内存 1T+256G固态</span>
+          <a href=""><img src="../43bootstrap/images/02.jpg" alt="" data-name='imgSrc' width="100px" height="100px"></a><span data-name="title">微星（MSI） GS73 (003CN) 17.3英寸轻薄游戏本 六核i7-8750H GTX1070 8G独显 16G内存 1T+256G固态</span>
         </div>
-        <div class="col-1 text-right ">￥<span data-name="price">69.00</span></div>
+        <div class="col-1 text-right ">￥<span data-name='price'>69.00</span></div>
         <div class="col-2">
           <div class="btn-group">
-            <button type="button" class="btn btn-sm btn-outline-danger" name='increase'>+</button>
-            <button type="button" class="btn btn-sm btn-outline-danger disabled" name='qty'>0</button>
-            <button type="button" class="btn btn-sm btn-outline-danger" name='decrease'>-</button>
+            <button type="button" class="btn btn-sm btn-outline-danger" data-operator='increase'>+</button>
+            <button type="button" class="btn btn-sm btn-outline-danger disabled" data-name='qty'>0</button>
+            <button type="button" class="btn btn-sm btn-outline-danger" data-operator='decrease'>-</button>
           </div>
         </div>
-        <div class="col-1">￥<span data-name="subTotal">0.00</span></div>
+        <div class="col-1">￥<span data-name="subPrice">0.00</span></div>
         <div class="col-1"><button class="btn btn-light" data-operato='deleteItem'>删除</button></div>
       </div>
     </div>
     <div class="row mt-3 border p-3">
-      <div class="col-2"><input type="checkbox">全选</div>
-      <div class="col-2"><button class="btn btn-light" name='deleteSelect'>删除选中的商品</button></div>
-      <div class="col-2"><button class="btn btn-light" name='clearCart'>清除购物车</button></div>
-      <div class="col-2">已选择 <span class="text-danger" data-name="totalProduct">0</span>件商品</div>
-      <div class="col-2">总价：￥<span class="text-danger" data-name="totalPrice">0</span></div>
-      <div class="col-2"><button class="btn btn-danger">去结算</button></div>
+       <div class="col-2"><input type="checkbox" checked="true" data-operator='selectAll'>全选</div>
+      <div class="col-2"><button class="btn btn-light" data-operator='deleteSelected'>删除选中的商品</button></div>
+      <div class="col-2"><button class="btn btn-light" data-operator='clearAll'>清空购物车</button></div>
+      <div class="col-2">已选择 <span class="text-danger" data-name='selectedQty'>0</span>件商品</div>
+      <div class="col-2">总价：¥<span class="text-danger" data-name="selectedAmount">0</span></div>
+      <div class="col-2"><button class="btn btn-danger" data-operator='gotoPlay'>去结算</button></div>
     </div>  
   </div>
   <!-- <div id="cartContent">
