--- a/课本项目/第八章项目/HeiMa8/index.html
+++ b/课本项目/第八章项目/HeiMa8/index.html
@@ -72,32 +72,57 @@
         </div>
     </nav>
     <!--轮播图-->
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel"  style=" width:1140px; height:350px;margin: auto;">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active" >
-            <img class="d-block w-100" src="" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="" alt="Second slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="" alt="Third slide">
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
+    <div class="slider">
+		<div id="images">
+			<a href="#" class="displayImg"><img src="images/01.jpg" alt=""></a>
+			<a href="#" class="hiddenImg"><img src="images/02.jpg" alt=""></a>
+			<a href="#" class="hiddenImg"><img src="images/03.jpg" alt=""></a>
+			<a href="#" class="hiddenImg"><img src="images/04.jpg" alt=""></a>
+			<a href="#" class="hiddenImg"><img src="images/05.jpg" alt=""></a>
+			<a href="#" class="hiddenImg"><img src="images/06.jpg" alt=""></a>
+			<a href="#" class="hiddenImg"><img src="images/07.jpg" alt=""></a>
+			<a href="#" class="hiddenImg"><img src="images/08.jpg" alt=""></a>
+		</div>
+		<div>
+			<p class="leftButton btn">上一张</p>
+			<p class="rightButton btn"> 下一张</p>
+		</div>
+		<ul class="txt-box">
+			<li class="txtItem normalColor" title="wodfjldjf">
+				<p>11</p>
+				<p>12</p>
+			</li>
+			<li class="txtItem normalColor">
+				<p>21</p>
+				<p>22</p>
+			</li>
+			<li class="txtItem normalColor">
+				<p>31</p>
+				<p>32</p>
+			</li>
+			<li class="txtItem normalColor">
+				<p>41</p>
+				<p>42</p>
+			</li>
+			<li class="txtItem normalColor">
+				<p>51</p>
+				<p>52</p>
+			</li>
+			<li class="txtItem normalColor">
+				<p>61</p>
+				<p>62</p>
+			</li>
+			<li class="txtItem normalColor">
+				<p>71</p>
+				<p>72</p>
+			</li>
+			<li class="txtItem normalColor">
+				<p>81</p>
+				<p>82</p>
+			</li>
+		</ul>
+		<p>广告</p>
+	</div>
     <!--信息模块-->
     <div class="heima_info hidden-xs">
         <div class="container">
