--- a/课后作业/43bootstrap/index.html
+++ b/课后作业/43bootstrap/index.html
@@ -17,18 +17,12 @@
     <header>
         <nav class="nav bg-light">
             <a class="nav-link active" href="#">首页</a>
-            <a class="nav-link disabled" href="shoppCart.html">购物车<span class="badge badge-danger" name="totalQty">0</span></a>
+            <a class="nav-link disabled" href="cartList.html">购物车<span class="badge badge-danger" data-name="totalQty">0</span></a>
         </nav>
         <!-- 导航结束 -->
-        <!-- 商品列表开始 -->
+
     </header>
-
-<!-- css选择器 -->
-<!-- id -->
-<!-- 标签名 -->
-<!-- 名称 -->
-
-
+    <!-- 商品列表开始 -->
     <main role="main">
         <div class="py-5 bg-light">
             <div class="container">
@@ -39,30 +33,32 @@
                             <div class="card-body">
                                 <p class="card-text text-nowrap">30片巨补水 秋冬新款面膜</p>
                                 <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-danger" name='increase'>+</button>
-                                        <button type="button" class="btn btn-sm btn-outline-danger disabled" name='qty'>0</button>
-                                        <button type="button" class="btn btn-sm btn-outline-danger" name='decrease'>-</button>
-                                        <button type="button" class="btn btn-sm btn-outline-danger" name='addToCart'data-id="01">加入购物车</button>
+                                    <div class="btn-group" data-id="01">
+                                        <button type="button" class="btn btn-sm btn-outline-danger" data-operator='increase'>+</button>
+                                        <button type="button" class="btn btn-sm btn-outline-danger disabled" data-name='qty'>1</button>
+                                        <button type="button" class="btn btn-sm btn-outline-danger" data-operator='decrease'>-</button>
+                                        <button type="button" class="btn btn-sm btn-outline-danger" data-operator='addToCart'
+                                            data-id="01">加入购物车</button>
                                     </div>
-                                    <large class="text-muted text-danger" name='unitPrice'>99.00</small>
+                                    <large class="text-muted text-danger" name='unitPrice'>99.50</small>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div class="card mb-4 shadow-sm">
+                        <div class="card mb-4 shadow-sm" data-id="02">
                             <img class="card-img-top" src="images/02.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <p class="card-text text-nowrap overflow ">新西兰进口白金版婴幼儿奶粉</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-danger" name='increase'>+</button>
-                                        <button type="button" class="btn btn-sm btn-outline-danger disabled" name='qty'>0</button>
-                                        <button type="button" class="btn btn-sm btn-outline-danger" name='decrease'>-</button>
-                                        <button type="button" class="btn btn-sm btn-outline-danger" name='addToCart'>加入购物车</button>
+                                        <button type="button" class="btn btn-sm btn-outline-danger"data-operator='increase'>+</button>
+                                        <button type="button" class="btn btn-sm btn-outline-danger disabled" data-name='qty'>1</button>
+                                        <button type="button" class="btn btn-sm btn-outline-danger" data-operator='decrease'>-</button>
+                                        <button type="button" class="btn btn-sm btn-outline-danger" data-operator='addToCart'
+                                            data-id="02">加入购物车</button>
                                     </div>
-                                    <large class="text-muted text-danger" name='unitPrice'>99.00</small>
+                                    <large class="text-muted text-danger" name='unitPrice'>80.50</small>
                                 </div>
                             </div>
                         </div>
@@ -74,12 +70,12 @@
                                 <p class="card-text">卡耐基经典 人性的弱点</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-danger" name='increase'>+</button>
-                                        <button type="button" class="btn btn-sm btn-outline-danger" name='qty'>0</button>
-                                        <button type="button" class="btn btn-sm btn-outline-danger" name='decrease'>-</button>
-                                        <button type="button" class="btn btn-sm btn-outline-danger" name='addToCart'>加入购物车</button>
+                                        <button type="button" class="btn btn-sm btn-outline-danger" data-operator='increase'>+</button>
+                                        <button type="button" class="btn btn-sm btn-outline-danger" data-name='qty'>1</button>
+                                        <button type="button" class="btn btn-sm btn-outline-danger" data-operator='decrease'>-</button>
+                                        <button type="button" class="btn btn-sm btn-outline-danger" data-operator='addToCart'  data-id="03">加入购物车</button>
                                     </div>
-                                    <large class="text-muted text-danger">99.00</small>
+                                    <large class="text-muted text-danger">50.00</small>
                                 </div>
                             </div>
                         </div>
@@ -92,20 +88,20 @@
                                 <p class="card-text">海淘耳机</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-danger" name='increase'>+</button>
-                                        <button type="button" class="btn btn-sm btn-outline-danger" name='qty'>0</button>
-                                        <button type="button" class="btn btn-sm btn-outline-danger" name='decrease'>-</button>
-                                        <button type="button" class="btn btn-sm btn-outline-danger" name='addToCart'>加入购物车</button>
+                                        <button type="button" class="btn btn-sm btn-outline-danger" data-operator='increase'>+</button>
+                                        <button type="button" class="btn btn-sm btn-outline-danger disabled" data-name='qty'>1</button>
+                                        <button type="button" class="btn btn-sm btn-outline-danger" data-operator='decrease'>-</button>
+                                        <button type="button" class="btn btn-sm btn-outline-danger" data-operator='addToCart'
+                                            data-id="04">加入购物车</button>
                                     </div>
-                                    <large class="text-muted text-danger">99.00</small>
+                                    <large class="text-muted text-danger">33.50</small>
                                 </div>
                             </div>
                         </div>
                     </div>
 
     </main>
-
-
+    <h1 class="text-hide">Custom heading</h1>
     <!-- 商品列表结束 -->
 
     <!-- JavaScript -->
@@ -116,11 +112,8 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
         crossorigin="anonymous"></script>
+    <script src="js/shoppingcart.js"></script>
     <script src="js/main.js"></script>
-    <script>
-        var a=document.getElementsByClassName('badge badge-danger');
-        console.log(a);
-    </script>
 </body>
 
 </html>
